--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -214,18 +214,20 @@
 
                 var ws = new WebSocket("ws://localhost:8888/listen");
                 ws.onmessage = function(message) {
+                    //console.log(message.data);
                     const ovPositions = JSON.parse(message.data);
                     const newPoints = Object.assign({}, points);
 
                     ovPositions.forEach(function(position) {
                         if (position.info.active) {
-                            newPoints[position.info.trip] = position;
+                            newPoints[position.info.tripId] = position;
                         } else {
-                            console.log('removed trip: ' + position.info.trip);
-                            delete newPoints[position.info.trip];
+                            console.log('removed trip: ' + position.info.tripId);
+                            delete newPoints[position.info.tripId];
                         }
                     });
 
+                    console.log(newPoints);
                     points = newPoints;
                     draw();
                 };
